<resources>
    <string name="app_name">PokemonQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_screen_label">タイトル画面</string>
    <string name="gen_select_screen_label">世代選択画面</string>
    <string name="quiz_screen_label">問題画面</string>
    <string name="result_screen_label">結果画面</string>
    <string name="title_text">ポケモンシルエットクイズ</string>
    <string name="start_text">START!!!</string>
    <string name="gen_1_select">一世代</string>
    <string name="gen_2_select">二世代</string>
    <string name="gen_3_select">三世代</string>
    <string name="gen_4_select">四世代</string>
    <string name="gen_5_select">五世代</string>
    <string name="gen_6_select">六世代</string>
    <string name="gen_7_select">七世代</string>
    <string name="gen_8_select">八世代</string>
    <string name="gen_select">第%1$d世代</string>
    <string name="empty">%d</string>
    <string name="display">世代選択画面に戻る</string>
    <string name="result">正解数</string>
</resources>